# dbatk

./: .gitignore  CMakeLists.txt
apps/: circle.cpp  dbat.cpp  dbconv.cpp  dbimport.cpp  kaitest.cpp
include/dbatk/: Api.h  Aspect.h  Aspects.h  Character.h  ClientConnection.h  Components.h  Core.h  Database.h  DgScripts.h  Exit.h  Grid.h  Item.h  Object.h  Position.h  Prototypes.h  Races.h  Room.h  Sector.h  Senseis.h  Sex.h  Structure.h  Terrain.h  Types.h  Zone.h  ansi.h  api.h  base.h  color.h  commands.h  components.h  conf.h  config.h  connection.h  coordinates.h  core.h  database.h  db.h  dgscript.h  flags.h  game.h  (+16 more)
include/dbatk/area/: area.h
include/dbatk/aspects/: admFlags.h  affect.h  celFlags.h  celType.h  charEquip.h  charStats.h  charWear.h  container.h  direction.h  effect.h  exitFlags.h  flags.h  gridTile.h  itemFlags.h  liquid.h  material.h  npcFlags.h  objFlags.h  playerFlags.h  position.h  pref.h  race.h  roomFlags.h  sensei.h  sex.h  size.h  skill.h  stat.h  terrain.h  wear.h
include/dbatk/celestialbody/: celestialbody.h  flags.h  type.h
include/dbatk/character/: admin.h  affect.h  character.h  effect.h  position.h  race.h  sensei.h  sex.h  stat.h
include/dbatk/commands/: admin.h  connect.h  login.h  object.h
include/dbatk/dimension/: dimension.h
include/dbatk/exit/: direction.h  exit.h  flags.h
include/dbatk/grid/: grid.h  tile.h
include/dbatk/item/: flags.h  item.h  liquid.h  wear.h
include/dbatk/npc/: flags.h  npc.h
include/dbatk/object/: admin.h  flags.h  material.h  object.h  size.h
include/dbatk/operations/: information.h  movement.h
include/dbatk/player/: flags.h  player.h  pref.h
include/dbatk/room/: flags.h  room.h  terrain.h
include/dbatk/sector/: sector.h
include/dbatk/vehicle/: vehicle.h
src/: Api.cpp  Aspect.cpp  Character.cpp  ClientConnection.cpp  Core.cpp  Database.cpp  DgScripts.cpp  Exit.cpp  Grid.cpp  Item.cpp  Object.cpp  Races.cpp  Room.cpp  Sector.cpp  Senseis.cpp  Sex.cpp  Structure.cpp  Terrain.cpp  Types.cpp  ansi.cpp  api.cpp  base.cpp  color.cpp  commands.cpp  components.cpp  conf.cpp  config.cpp  connection.cpp  coordinates.cpp  core.cpp  database.cpp  db.cpp  dgscript.cpp  game.cpp  gametime.cpp  grammar.cpp  item.cpp  link.cpp  message.cpp  mobile.cpp  (+8 more)
src/aspects/: admFlags.cpp  affect.cpp  celFlags.cpp  celType.cpp  charEquip.cpp  charStats.cpp  charWear.cpp  direction.cpp  effect.cpp  exitFlags.cpp  itemFlags.cpp  liquid.cpp  material.cpp  npcFlags.cpp  objFlags.cpp  playerFlags.cpp  position.cpp  pref.cpp  race.cpp  roomFlags.cpp  sensei.cpp  sex.cpp  size.cpp  terrain.cpp
src/character/: admin.cpp  character.cpp  position.cpp  race.cpp  sensei.cpp  sex.cpp  stat.cpp
src/commands/: admin.cpp  connect.cpp  login.cpp  object.cpp
src/exit/: direction.cpp  exit.cpp  flags.cpp
src/item/: item.cpp
src/npc/: npc.cpp
src/object/: admin.cpp  flags.cpp  object.cpp  size.cpp
src/operations/: information.cpp  movement.cpp
src/player/: player.cpp
src/room/: flags.cpp  room.cpp  terrain.cpp
